# frpc-gui

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
src/: app_update.cpp  app_update.h  app_version.h  config.cpp  config.h  frp-desk.rc  frpc-gui.rc  frpc_manager.cpp  frpc_manager.h  main.cpp  version_manager.cpp  version_manager.h
ui/: app.slint
ui/components/: card.slint  nav_button.slint
ui/pages/: about_page.slint  frps_page.slint  log_page.slint  proxy_page.slint  status_page.slint  version_page.slint
